# rust-lints

./: .gitignore  Cargo.toml  DESIGN.md  README.md  dylint.toml  fixable-lints.cargo.toml  fixable-lints.json  fixable-lints.pre-commit.sh  flake.nix  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: nix.yml  update-fixable-lints.yml
docs/: blocking-in-async.md  debug-remnants.md  fallible-new.md  global-side-effect.md  impl-notes-proper-error-type.md  map-init-then-insert.md  module-dependencies.md  nix-cachix.md  nix-packaging.md  panic-in-drop.md  proper-error-type.md  realtime-in-async-test.md  recommended-lint-config.md  result-result.md  suggest-fn-builder.md  unbounded-channel.md  unstructured-log-fields.md
nix/dylint-driver/: Cargo.toml
scripts/: recommended-config.py  scrape-clippy-applicability.py  strip-decorative-comments.awk  test-strip-decorative-comments.sh
src/: config.rs  lib.rs
src/lints/: blocking_in_async.rs  bon_builder_collector.rs  call_matching.rs  debug_remnants.rs  fallible_new.rs  global_side_effect.rs  large_struct.rs  map_init_then_insert.rs  mod.rs  module_dependencies.rs  needless_builder.rs  panic_in_drop.rs  proper_error_type.rs  realtime_in_async_test.rs  result_result.rs  suggest_builder.rs  suppression.rs  unbounded_channel.rs  unstructured_log_fields.rs
ui/blocking_in_async/: main.rs  main.stderr
ui/debug_remnants/: main.rs  main.stderr
ui/fallible_new/: main.rs
ui/global_side_effect/: main.rs  main.stderr
ui/large_struct/: main.rs  main.stderr
ui/map_init_then_insert/: main.rs  (+1 more)
(+19 files in other folders)
