[package]
name = "rust-lints"
version = "0.1.0"
edition = "2024"
description = "Custom Rust lints via the dylint ecosystem"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
dylint_linting = "5.0.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bon = "3"
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
